--- a/.github/workflows/gh-migration.yml
+++ b/.github/workflows/gh-migration.yml
@@ -16,6 +16,9 @@ on:
 jobs:
   migrate-repo:
     runs-on: ${{ inputs.runner }}
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
